tests/syntactic_tests/errors/fakeprogram1.bl
var int primes[5] #error here--no semi colon

procedure int main(int num) { #change int to gdfgsdfgd, change num to 4
  5 ##this shouldn't be here
  int count;
  count := 0;
  if (num < 2)
    return 0;
  endif
  while (count < 5) {
    if (!(primes[count] == 0) && ((num % primes[count]) == 0))
      return 0;
    endif
    count := count + 1;
  }
  return 1;
}



